--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
     "font-awesome": "^4.7.0",
+    "joi": "^14.3.1",
     "loadash": "^1.0.0",
     "proptypes": "^1.1.0",
     "react": "^16.13.1",
